--- a/src/Styles/Components/SideMenu.scss
+++ b/src/Styles/Components/SideMenu.scss
@@ -36,10 +36,11 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        &:active {
+          border-style: none;
+        }
         img {
-          transition: 750ms ease-in-out;
-          transform: rotate(360deg); // by default
-          // transform: rotate(45deg);
+          transition: 350ms ease-out;
           width: 28px;
           height: 28px;
         }
