--- a/src/Styles/Components/SideMenu.scss
+++ b/src/Styles/Components/SideMenu.scss
@@ -56,7 +56,7 @@
       align-items: center;
 
       position: relative;
-      // margin-top: -48px; //hide behind the + button
+      transition: 150ms ease-out;
 
       z-index: 10;
 
@@ -67,8 +67,7 @@
         margin: 0px auto;
 
         border-radius: 100%;
-
-        // opacity: 0; //hide by default
+        transition: 50ms ease-in;
 
         &.first {
           background: #ffcf7d;
