displaying the correct color of the card

--- a/src/Styles/Components/Card.scss
+++ b/src/Styles/Components/Card.scss
@@ -5,5 +5,6 @@
   border-radius: 24px;
   padding: 28px;
   background: #ffcf7d;
-  // position: relative;
+  position: relative;
+  //   transition: 2s ease-in-out;
 }
