--- a/src/Styles/Components/Card.scss
+++ b/src/Styles/Components/Card.scss
@@ -4,7 +4,66 @@
   width: 350px;
   border-radius: 24px;
   padding: 28px;
-  background: #ffcf7d;
   position: relative;
   //   transition: 2s ease-in-out;
+  textarea {
+    background: none;
+    border: none;
+    font-size: 20px;
+    font-weight: 500;
+    padding-right: 56px;
+    outline: none;
+    font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    resize: none;
+    height: 80%;
+    &::placeholder {
+      color: var(--neutral-400);
+    }
+    &::-webkit-scrollbar {
+      width: 8px;
+      border-radius: 8px;
+      background-color: rgba($color: #f5f5f5, $alpha: 0.5);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 8px;
+      // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      background-color: rgba($color: #000000, $alpha: 0.7);
+    }
+  }
+  .footer {
+    padding: 28px;
+    padding-bottom: 16px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .date {
+      span {
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+    .edit {
+      button {
+        border-radius: 100%;
+        background: #000;
+        border: none;
+        height: 48px;
+        width: 48px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        outline: none;
+        cursor: pointer;
+        img {
+          height: 18px;
+        }
+      }
+    }
+  }
 }
