--- a/src/Styles/Components/Card.scss
+++ b/src/Styles/Components/Card.scss
@@ -1,7 +1,7 @@
 .note {
   margin: 16px;
   height: 310px;
-  width: 350px;
+  width: 310px;
   border-radius: 24px;
   padding: 28px;
   position: relative;
@@ -11,8 +11,9 @@
     border: none;
     font-size: 20px;
     font-weight: 500;
-    padding-right: 56px;
+    padding-right: 16px;
     outline: none;
+    color: var(--text);
     font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     resize: none;
@@ -33,15 +34,14 @@
     }
   }
   .footer {
-    padding: 28px;
+    padding: 28px 0;
     padding-bottom: 16px;
     width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    color: var(--text);
     .date {
       span {
         font-size: 16px;
@@ -51,7 +51,7 @@
     .edit {
       button {
         border-radius: 100%;
-        background: #000;
+        background: var(--text);
         border: none;
         height: 48px;
         width: 48px;
