--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,5 +1,16 @@
 * {
   box-sizing: border-box;
+  &::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 8px;
+    background-color: rgba($color: #f5f5f5, $alpha: 0.8);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: rgba($color: #000000, $alpha: 0.7);
+  }
 }
 
 body {
