--- a/src/Styles/Components/Card.scss
+++ b/src/Styles/Components/Card.scss
@@ -55,6 +55,7 @@
         border: none;
         height: 48px;
         width: 48px;
+        margin-left: 8px;
         display: flex;
         align-items: center;
         justify-content: center;
