--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,3 +1,4 @@
+@import "./breakpoints.scss";
 * {
   box-sizing: border-box;
   &::-webkit-scrollbar {
@@ -8,7 +9,6 @@
 
   &::-webkit-scrollbar-thumb {
     border-radius: 8px;
-    // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: rgba($color: #000000, $alpha: 0.7);
   }
 }
@@ -47,11 +47,22 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-size: 16;
+  font-size: 16px;
+  @include media("<=tablet") {
+    font-size: 14px;
+  }
 }
 
 html,
 body,
 #root {
   height: 100%;
+}
+
+.view {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--neutral-200);
 }
