--- a/src/Styles/Components/SideMenu.scss
+++ b/src/Styles/Components/SideMenu.scss
@@ -85,6 +85,7 @@
         top: -1.25rem;
         border-radius: 100%;
         transition: 25ms ease-in;
+        opacity: 0;
 
         cursor: pointer;
 
