--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -48,7 +48,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  @include media("<=tablet") {
+  @include media("<=890px") {
     font-size: 14px;
   }
 }
