--- a/src/Styles/Components/Card.scss
+++ b/src/Styles/Components/Card.scss
@@ -1,17 +1,27 @@
+@import "../breakpoints.scss";
 .note {
-  margin: 16px;
+  margin: 1rem;
   height: 310px;
   width: 310px;
-  border-radius: 24px;
+  border-radius: 1.5rem;
   padding: 28px;
-  position: relative;
-  //   transition: 2s ease-in-out;
+
+  // @include media("<=tablet") {
+  //   padding: 1.5rem;
+  // }
+
   textarea {
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 500;
+    width: 92.75%;
     padding-right: 16px;
+
+    @include media("<900px") {
+      width: 93%;
+    }
+
     outline: none;
     color: var(--text);
     font-family: "Avenir", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -22,14 +32,13 @@
       color: var(--neutral-400);
     }
     &::-webkit-scrollbar {
-      width: 8px;
-      border-radius: 8px;
+      width: 0.5rem;
+      border-radius: 0.5rem;
       background-color: rgba($color: #f5f5f5, $alpha: 0.5);
     }
 
     &::-webkit-scrollbar-thumb {
-      border-radius: 8px;
-      // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+      border-radius: 0.5rem;
       background-color: rgba($color: #000000, $alpha: 0.7);
     }
   }
@@ -44,7 +53,7 @@
     color: var(--text);
     .date {
       span {
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 500;
       }
     }
@@ -53,16 +62,16 @@
         border-radius: 100%;
         background: var(--text);
         border: none;
-        height: 48px;
-        width: 48px;
-        margin-left: 8px;
+        height: 3rem;
+        width: 3rem;
+        margin-left: 0.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
         outline: none;
         cursor: pointer;
         img {
-          height: 18px;
+          height: 1.125rem;
         }
       }
     }
