added a logout button

--- a/src/Styles/Components/Panel.scss
+++ b/src/Styles/Components/Panel.scss
@@ -4,27 +4,63 @@
   height: 100%;
   overflow-y: auto;
   flex: 1;
-  padding: 1.5rem 2rem;
   @include media("<=tablet") {
     padding: 1.5rem 1rem;
   }
   .header {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    padding-top: 0 !important;
+    top: 0;
+    background-color: var(--neutral-200);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     h2 {
+      padding: 1.5rem 2rem;
       font-size: 2rem;
       margin: 0;
       line-height: 1;
       color: var(--text);
     }
-  }
-  .notes {
-    padding: 0 0.75rem;
-    @include media("<=tablet") {
-      padding: 0;
-    }
-    display: flex;
-    flex-wrap: wrap;
-    @include media("<=tablet") {
+    .logout-button {
+      margin: 0 2rem;
+
+      z-index: 21;
+      border-radius: 100%;
+      background: var(--text);
+      border: none;
+      height: 3rem;
+      width: 3rem;
+      outline: none;
+      // position: relative;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
       justify-content: center;
+      &:active {
+        border-style: none;
+      }
+      img {
+        transition: 350ms ease-out;
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
+  }
+  .notes-wrapper {
+    padding: 1.5rem 2rem;
+    padding-top: 0;
+    .notes {
+      padding: 0 0.75rem;
+      @include media("<=tablet") {
+        padding: 0;
+      }
+      display: flex;
+      flex-wrap: wrap;
+      @include media("<=tablet") {
+        justify-content: center;
+      }
     }
   }
 }
