--- a/src/Styles/Views/Signup.scss
+++ b/src/Styles/Views/Signup.scss
@@ -268,6 +268,9 @@
               &:hover {
                 background-color: var(--primary-300);
               }
+              &:focus {
+                background-color: var(--primary-400);
+              }
             }
             .overlay {
               background-color: rgba(0, 0, 0, 0.75);
