--- a/src/Styles/Components/Panel.scss
+++ b/src/Styles/Components/Panel.scss
@@ -4,6 +4,7 @@
   height: 100%;
   overflow-y: auto;
   flex: 1;
+  z-index: 90;
   .header {
     position: -webkit-sticky; /* Safari */
     position: sticky;
