--- a/src/Styles/Components/Toast.scss
+++ b/src/Styles/Components/Toast.scss
@@ -5,11 +5,16 @@
   bottom: 0;
   right: 0%;
   height: 100%;
-  z-index: 999;
+  z-index: 0;
   width: 92%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  overflow: hidden;
+
+  &.visible {
+    z-index: 999;
+  }
 
   @include media("<SMdesktop") {
     width: 90%;
@@ -22,23 +27,32 @@
     width: 82.5%;
   }
   .toast {
-    height: 6rem;
-    width: 24rem;
-    // margin-bottom: 2rem;
+    z-index: 900;
+    position: relative;
+    width: 18rem;
+    height: 5rem;
+
+    border-radius: 8px;
+    background-color: #f1f3f5;
+    box-shadow: 0px 1px 3px 0px rgba(64, 64, 64, 0.24);
+
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--neutral-100);
-    outline-style: auto;
-    outline-width: 2px;
+
+    margin-bottom: -12rem;
+    transition: 450ms ease-out;
 
     &.success {
-      outline-color: var(--success-300);
-      color: var(--success-300) !important;
+      background-color: var(--success-100);
     }
     &.danger {
-      outline-color: var(--danger-300);
-      color: var(--danger-300) !important;
+      background-color: var(--danger-100);
+    }
+
+    &.visible {
+      display: flex;
+      margin-bottom: 0.5rem;
     }
     h2 {
       font-family: inherit;
