--- a/src/Styles/Views/SignIn.scss
+++ b/src/Styles/Views/SignIn.scss
@@ -21,27 +21,27 @@
       @include media("<tablet") {
         display: none;
       }
-      .header {
-        height: 10%;
-        width: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        .logo {
-          padding-left: 2rem;
-          width: 80px;
-        }
-      }
+      // .header {
+      //   height: 10%;
+      //   width: 100%;
+      //   position: fixed;
+      //   top: 0;
+      //   left: 0;
+      //   display: flex;
+      //   align-items: center;
+      //   .logo {
+      //     padding-left: 2rem;
+      //     width: 80px;
+      //   }
+      // }
       .content {
-        height: 90%;
+        height: 80%;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       .legend {
-        height: 10%;
+        height: 20%;
         display: flex;
         flex-direction: column;
         align-items: center;
